test/Fail/Issue2456.err
Issue2456.agda:9.12-19: error: [Syntax.WrongContentBlock]
Unexpected declaration
